--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -10,6 +10,6 @@ jobs:
   hello-world:
     runs-on: ubuntu-latest
     steps:
-      -name: Hello world action
+      name: Hello world action
       run: |
         echo "Hello world!"
