--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -10,4 +10,5 @@ jobs:
   hello-world:
     runs-on: ubuntu-latest
     steps:
-      runs: echo "Hello, world!"
+      runs: |
+        echo "Hello, world!"
