--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -10,4 +10,5 @@ jobs:
   hello-world:
     runs-on: ubuntu-latest
     steps:
-       - run: echo "Hello, world!"
+      - name: Hello world
+        run: echo "Hello, world!"
