--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -11,4 +11,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Hello world
-        run: echo "Hello, world!"
+        run: | 
+          echo "Hello, world!"
