--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,16 +1,15 @@
-name: Hello world
-description: A workflow to say hello
-iconName: octicon beaker
-creator: me
+name: Hello World!
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - master
+      # note that your "main" branch might be called main instead of master
 
 jobs:
-  hello-world:
-    runs-on: ubuntu-latest
+  hello_world_job:
+    runs-on: ubuntu-20.04
     steps:
-      - name: Hello world
-        run: | 
-          echo "Hello, world!"
+      - name: Say hello
+        run: |
+          echo "Hello World!"
