Add build and test steps

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -23,4 +23,8 @@ jobs:
         run: npm install eslint
       - name: Lint code
         run: npm run lint
+      - name: Build
+        run: npm run build
+      - name: run tests
+        run: npm test
 
